Added a Logged In screen

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Syllabus Tracker</title>
+	<title>FC Syllabus Tracker</title>
 
 	<!-- Meta -->
 
@@ -20,9 +20,12 @@
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
-<body onload="isLoggedin()">
+<body>
 	<div id='root'></div>	<!-- Root Element -->
 	<script type="text/javascript" src="scripts/components.js"></script>
 	<script type="text/javascript" src="scripts/scripts.js"></script>
+	<script type="text/javascript">
+		isLoggedin();
+	</script>
 </body>
 </html>
