Added Footer and some Style Changes.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Meta -->
 
 	<meta charset="utf-8">
-	<meta description='Web App to keep track of your syllabus completion.'>
+	<meta description='Web App to keep track of your CS syllabus completion.'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Stylesheets -->
@@ -23,6 +23,19 @@
 </head>
 <body>
 	<div id='root'></div>	<!-- Root Element -->
+
+	<!-- Footer -->
+	<footer class='row'>
+		<div class='col-xs-9'>
+			Created By <a href="https://deve-sh.github.io" target="_blank">Devesh Kumar</a>.
+		</div>
+		<div class='col-xs-3'>
+			<a href='https://github.com/deve-sh' target="_blank">
+				<i class="fab fa-github-square fa-lg"></i>
+			</a>
+		</div>
+	</footer>
+
 	<script type="text/javascript" src="scripts/components.js"></script>
 	<script type="text/javascript" src="scripts/scripts.js"></script>
 	<script type="text/javascript">
