Added a minified Scripts file and made it the default.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 			</a>
 		</div>
 	</footer>
-
-	<script type="text/javascript" src="scripts/components.js"></script>
-	<script type="text/javascript" src="scripts/scripts.js"></script>
+	
+	<script type="text/javascript" src="scripts/scripts-min.js"></script>
 	<script type="text/javascript">
 		isLoggedin();
 	</script>
